Confimration order has been added

--- a/mobile_client/Preordrer/src/main/AndroidManifest.xml
+++ b/mobile_client/Preordrer/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
             android:label="@string/title_activity_goods_selecting"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
+        <activity android:name=".OrderConfirmationActivity" >
+        </activity>
     </application>
 
 </manifest>
