--- a/PreOrderServer/src/main/webapp/WEB-INF/web.xml
+++ b/PreOrderServer/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,7 @@
 
   <display-name>Archetype Created Web Application</display-name>
 
+    
     <servlet>
         <servlet-name>PreOrder Servlet REST</servlet-name>
         <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
@@ -16,5 +17,9 @@
         <servlet-name>PreOrder Servlet REST</servlet-name>
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
+
+    <!--<welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>-->
 
 </web-app>
