Added jetty war autodeploy and JSON(Order) sent to server will save in root folder and responce to client as well

--- a/PreOrderCommon/pom.xml
+++ b/PreOrderCommon/pom.xml
@@ -9,6 +9,26 @@
     <packaging>jar</packaging>
 
 
+    <build>
+        <finalName>preorder.prototype.common</finalName>
+        <plugins>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>${user.dir}\PreOrderCommon\target</directory>
+                            <!--<directory>${user.dir}\PreOrderServer\target</directory>-->
+                            <followSymlinks>false</followSymlinks>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
     <parent>
         <groupId>org.preorder.prototype</groupId>
         <artifactId>preorder.prototype</artifactId>
