--- a/PreOrderServer/pom.xml
+++ b/PreOrderServer/pom.xml
@@ -11,6 +11,21 @@
 
     <build>
       <finalName>preorder.prototype.server</finalName>
+        <plugins>
+          <plugin>
+            <artifactId>maven-clean-plugin</artifactId>
+            <version>3.0.0</version>
+            <configuration>
+              <filesets>
+                <fileset>
+                  <!--<directory>${user.dir}\PreOrderCommon\target</directory>-->
+                  <directory>${user.dir}\PreOrderServer\target</directory>
+                  <followSymlinks>false</followSymlinks>
+                </fileset>
+              </filesets>
+            </configuration>
+          </plugin>
+        </plugins>
     </build>
 
   <parent>
