--- a/PreOrderCommon/build.gradle
+++ b/PreOrderCommon/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'java'
 
+compileJava {
+    sourceCompatibility = "1.7"
+    targetCompatibility = "1.7"
+}
 
 repositories {
     mavenCentral()
