--- a/PreOrderServer/build.gradle
+++ b/PreOrderServer/build.gradle
@@ -1,18 +1,21 @@
 apply plugin: 'java'
 
+ext {
+    targetCompatibility = "1.7"
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile project( ':PreOrderCommon')
+    compile project(':PreOrderCommon')
     compile 'com.sun.jersey:jersey-client:1.9.1'
     compile 'org.codehaus.jackson:jackson-core-asl:1.9.13'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
-    compile ('log4j:log4j:1.2.15') {
-        exclude group:'javax.jms', module:'jms'
-        exclude group:'com.sun.jdmk', module:'jmxtools'
-        exclude group:'com.sun.jmx', module:'jmxri'
+    compile('log4j:log4j:1.2.15') {
+        exclude group: 'javax.jms', module: 'jms'
+        exclude group: 'com.sun.jdmk', module: 'jmxtools'
+        exclude group: 'com.sun.jmx', module: 'jmxri'
     }
-
 }
