--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,16 @@
 apply plugin: 'java'
 
+ext {
+    targetCompatibility = "1.7"
+}
+
 evaluationDependsOn(':PreOrderCommon')
 
 dependencies {
     compile project(':PreOrderCommon')
     compile project(':PreOrderServer')
+    compile project(':Preordrer')
 }
 
 
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
-}
-
-allprojects {
-    repositories {
-        jcenter()
-    }
-}
-/*
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
-*/
