--- a/Preordrer/src/main/AndroidManifest.xml
+++ b/Preordrer/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
+
         <activity
             android:name=".ui.RestraintListActivity"
             android:label="@string/app_name"
@@ -36,6 +37,8 @@
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <activity android:name=".ui.OrderConfirmationActivity" >
+        </activity>
+        <activity android:name=".ui.CompletedOrderActivity" >
         </activity>
     </application>
 
